--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,11 @@
 		<!-- build.outputDirectory>${project.basedir}/target</build.outputDirectory-->
 
 	<properties>
+		<!---->
 		<build.outputDirectory>${project.basedir}/target</build.outputDirectory>
-		<!-- build.outputDirectory>${project.basedir}/../../../git/sshfs-keycloak/standalone/deployments</build.outputDirectory -->
+		<!--
+		<build.outputDirectory>${project.basedir}/../../../git/sshfs-keycloak/standalone/deployments</build.outputDirectory>
+		-->
 		<source.outputDirectory>${project.basedir}/target</source.outputDirectory>
 		<attach.sources.phase>none</attach.sources.phase>
 	</properties>
